# level2_dataannotation_cv-level2-cv-17

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  environment-pip-freeze.txt  environment-revisions.txt  environment.yml  environment0.yml  note.md  pyproject.toml  setup.cfg  spec-file.txt  tqdm vs tqdm_rich.txt
.github/workflows/: pre-commit-2.yml  pre-commit.yml
docs/: ICDAR2015.md  ICDAR2017.md  ICDAR2019.md  Out-of-Vocabulary-2022.md  README.md  conda.md  git.md
src/: OCR_EDA.ipynb  augmentation.py  bbox_expander.py  bbox_shaker.py  bbox_transformer.py  convert_mlt.py  dataset.py  dataset_ComposedTransformation.py  detect.py  deteval.py  east_dataset.py  inference.py  logger.py  loss.py  model.py  polygon_to_quadrangle.ipynb  result_visualizer.ipynb  test_annotation.json  train.py  train2.py  train_resume.py  ufo_visualizer.py
src/utils/: illegibility_json_delete.ipynb  json_merge.ipynb  visualization_bbox.ipynb
